--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <header>
-            <img src="assets/images/logo.png" class="logo"/>
+            <a href="./index.html" aria-label="Link to homepage"><img src="./assets/images/logo.png" class="logo" alt="logo"/></a>
+
         </header>
         <main id="main">
             <div class="photograph-header">
