make photographer.html header

--- a/photographer.html
+++ b/photographer.html
@@ -12,6 +12,7 @@
             <a href="./index.html" aria-label="Link to homepage"><img src="./assets/images/logo.png" class="logo" alt="logo"/></a>
 
         </header>
+
         <main id="main">
             <div class="photograph-header">
                 <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
@@ -32,6 +33,7 @@
                 </form>
             </div>
         </div>
+        <script src="./scripts/factories/currentPhotograph.js"></script>
         <script src="./scripts/utils/contactForm.js"></script>
         <script src="./scripts/pages/photographer.js"></script>
 
