--- a/photographer.html
+++ b/photographer.html
@@ -17,6 +17,7 @@
             <div class="photograph-header">
                 <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
             </div>
+            <div class="mediaDiv"></div>
         </main>
         <div id="contact_modal">
             <div class="modal">
@@ -34,6 +35,7 @@
             </div>
         </div>
         <script src="./scripts/factories/currentPhotograph.js"></script>
+        <script src="./scripts/factories/media.js"></script>
         <script src="./scripts/utils/contactForm.js"></script>
         <script src="./scripts/pages/photographer.js"></script>
 
