--- a/photographer.html
+++ b/photographer.html
@@ -26,13 +26,28 @@
                         <h2>Contactez-moi</h2>
                         <img src="assets/icons/close.svg" onclick="closeModal()"/>
                     </header>
-                    <form id="contact_form" aria-label="formulaire de contact">
+                    <form id="contact_form" aria-label="formulaire de contact" method="post" onsubmit="validate(event)">
                         <div>
                             <label for="prenom">Prénom</label>
                             <input type="text" id="prenom" name="prenom" title="prenom"/>
                             <span id="prenom__error" class="error">Veuillez entrer 2 caractères minimum pour votre prénom.</span>
                         </div>
-                        <button class="contact_button">Envoyer</button>
+                        <div>
+                            <label for="nom">Nom</label>
+                            <input type="text" id="nom" name="nom" title="nom"/>
+                            <span id="nom__error" class="error">Veuillez entrer 2 caractères minimum pour votre nom.</span>
+                        </div>
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" title="email"/>
+                            <span id="email__error" class="error">Email n on valide.</span>
+                        </div>
+                        <div>
+                            <label for="message">Votre message</label>
+                            <textarea id="message" name="message" title="message" rows="5" type="text"></textarea>
+                            <span id="textarea__error" class="error">Veuillez entrer un message.</span>
+                        </div>
+                        <button class="contact_button" type="submit">Envoyer</button>
                     </form>
                 </div>
             </div>
