add personnal name on modal

--- a/photographer.html
+++ b/photographer.html
@@ -23,7 +23,10 @@
             <div id="contact_modal">
                 <div class="modal">
                     <header>
-                        <h2>Contactez-moi</h2>
+                        <div id="presentation">
+                            <h2>Contactez-moi</h2>
+                            <h3 id="modal__name"></h3>
+                        </div>
                         <img src="assets/icons/close.svg" onclick="closeModal()"/>
                     </header>
                     <form id="contact_form" aria-label="formulaire de contact" method="post" onsubmit="validate(event)">
