--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <a href="./index.html" aria-label="Link to homepage"><img src="./assets/images/logo.png" class="logo" alt="logo"/></a>
+            <a href="./index.html"><img src="./assets/images/logo.png" class="logo" alt="logo fisheye - page d'accueil"/></a>
             <h1>Nos photographes</h1>
         </header>
         <main id="main">
