--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <a href="./index.html" aria-label="Link to homepage"><img src="./assets/images/logo.png" class="logo" alt="logo"/></a>
+            <a href="./index.html"><img src="./assets/images/logo.png" class="logo" alt="logo fisheye - Page d'accueil"/></a>
 
         </header>
         <section>
