--- a/photographer.html
+++ b/photographer.html
@@ -34,22 +34,22 @@
                         <!--Ajout d'un groupe pour les coordonnées de l'utilisateur-->
                         <div role="group" aria-labelledby="coordonnees">
                             <label for="prenom">Prénom</label>
-                            <input type="text" id="prenom" name="prenom" title="prenom" placeholder="John"/>
+                            <input type="text" id="prenom" name="prenom" title="prenom" placeholder="John" aria-required="true"/>
                             <span id="prenom__error" class="error">Veuillez entrer 2 caractères minimum pour votre prénom.</span>
 
 
                             <label for="nom">Nom</label>
-                            <input type="text" id="nom" name="nom" title="nom" placeholder="Doe"/>
+                            <input type="text" id="nom" name="nom" title="nom" placeholder="Doe" aria-required="true"/>
                             <span id="nom__error" class="error">Veuillez entrer 2 caractères minimum pour votre nom.</span>
 
 
                             <label for="email">Email</label>
-                            <input type="email" id="email" name="email" title="email" placeholder="jdoe@exemple.com"/>
+                            <input type="email" id="email" name="email" title="email" placeholder="jdoe@exemple.com" aria-required="true"/>
                             <span id="email__error" class="error">Email n on valide.</span>
                         </div>
                         <div>
                             <label for="message">Votre message</label>
-                            <textarea id="message" name="message" title="message" rows="5" type="text"></textarea>
+                            <textarea id="message" name="message" title="message" rows="5" type="text" aria-required="true"></textarea>
                             <span id="textarea__error" class="error">Veuillez entrer un message.</span>
                         </div>
                         <button class="contact_button" type="submit">Envoyer</button>
