add aria and css on form

--- a/photographer.html
+++ b/photographer.html
@@ -49,7 +49,7 @@
                         </div>
                         <div>
                             <label for="message">Votre message</label>
-                            <textarea id="message" name="message" title="message" rows="5" type="text" aria-required="true"></textarea>
+                            <textarea id="message" name="message" title="message" rows="5" type="text" aria-required="true" placeholder="Votre message..."></textarea>
                             <span id="textarea__error" class="error">Veuillez entrer un message.</span>
                         </div>
                         <button class="contact_button" type="submit">Envoyer</button>
