start form validation

--- a/photographer.html
+++ b/photographer.html
@@ -27,7 +27,7 @@
                             <h2>Contactez-moi</h2>
                             <h3 id="modal__name"></h3>
                         </div>
-                        <img src="assets/icons/close.svg" onclick="closeModal()"/>
+                        <img src="assets/icons/close.svg" alt="close button" aria-label="bouton fermer" onclick="closeModal()"/>
                     </header>
                     <form
                         id="contact_form" aria-label="formulaire de contact" method="post" onsubmit="validate(event)">
