--- a/photographer.html
+++ b/photographer.html
@@ -14,7 +14,7 @@
 
         </header>
         <section>
-            <main id="main">
+            <main id="main" aria-hidden="false">
                 <div class="photograph-header">
                     <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
                 </div>
