--- a/photographer.html
+++ b/photographer.html
@@ -20,14 +20,14 @@
                 </div>
                 <div class="mediaDiv"></div>
             </main>
-            <div id="contact_modal">
+            <div id="contact_modal" role="dialog" aria-hidden="true">
                 <div class="modal">
                     <header>
                         <div id="presentation">
                             <h2>Contactez-moi</h2>
                             <h3 id="modal__name"></h3>
                         </div>
-                        <img src="assets/icons/close.svg" alt="close button" aria-label="bouton fermer" onclick="closeModal()"/>
+                        <button aria-label="bouton fermer" onclick="closeModal()" id="close__modal__btn"><img src="assets/icons/close.svg" alt="close button"/></button>
                     </header>
                     <form
                         id="contact_form" aria-label="formulaire de contact" method="post" onsubmit="validate(event)">
