add modal focus

--- a/photographer.html
+++ b/photographer.html
@@ -16,11 +16,11 @@
         <section>
             <main id="main" aria-hidden="false">
                 <div class="photograph-header">
-                    <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+                    <button class="contact_button header__contact__button" onclick="displayModal()">Contactez-moi</button>
                 </div>
                 <div class="mediaDiv"></div>
             </main>
-            <div id="contact_modal" role="dialog" aria-hidden="true">
+            <div id="contact_modal" role="dialog" aria-hidden="true" tabindex="0">
                 <div class="modal">
                     <header>
                         <div id="presentation">
