add input check

--- a/photographer.html
+++ b/photographer.html
@@ -36,11 +36,13 @@
                             <label for="prenom">Prénom</label>
                             <input type="text" id="prenom" name="prenom" title="prenom" placeholder="John" aria-required="true"/>
                             <span id="prenom__error" class="error">Veuillez entrer 2 caractères minimum pour votre prénom.</span>
+                            <span id="prenom__regex__error" class="regex__error">Uniquement des lettres.</span>
 
 
                             <label for="nom">Nom</label>
                             <input type="text" id="nom" name="nom" title="nom" placeholder="Doe" aria-required="true"/>
                             <span id="nom__error" class="error">Veuillez entrer 2 caractères minimum pour votre nom.</span>
+                            <span id="nom__regex__error" class="regex__error">Uniquement des lettres.</span>
 
 
                             <label for="email">Email</label>
