--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <link href="css/style.css" rel="stylesheet" type="text/css"/>
         <meta charset="utf-8">
-        <link rel="icon" type="image/png" href="assets/favicon.png">
-        <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="./css/style.css" rel="stylesheet"/>
+        <link rel="icon" href="./assets/images/favicon.ico">
+        <script src="https://kit.fontawesome.com/07ef921c81.js" crossorigin="anonymous"></script>
         <title>Fisheye</title>
     </head>
     <body>
         <header>
-            <a href="./index.html"><img src="./assets/images/logo.png" class="logo" alt="logo fisheye - page d'accueil"/></a>
-            <h1>Nos photographes</h1>
+            <nav aria-label="Navigation Page Accueil">
+                <a tabindex="0" href="./index.html">
+                    <img src="./assets/images/logo.png" class="logo" alt="Fisheye Home Page"/>
+                </a>
+            </nav>
+            <h1 tabindex="0">Nos photographes</h1>
         </header>
         <main id="main">
-            <div class="photographer_section"></div>
+            <nav aria-label="Navigation principale" class="photographer_section"></nav>
         </main>
-        <script src="./scripts/factories/Photographer.js"></script>
+        <script src="./scripts/factories/photographerFactory.js"></script>
         <script src="./scripts/pages/index.js"></script>
     </body>
 </html>
