--- a/photographer.html
+++ b/photographer.html
@@ -18,7 +18,7 @@
                 </a>
             </nav>
         </header>
-        <main id="main">
+        <main id="main" aria-hidden="" false>
             <section class="photograph-header"></section>
             <section class="gallery">
                 <div class="filter">
