add alt in french on lightbox

--- a/photographer.html
+++ b/photographer.html
@@ -76,9 +76,9 @@
         <div id="lightboxmodal" role="dialog" aria-label="Media en gros plan" aria-hidden="true" tabindex="0">
             <div id="lightbox">
                 <button aria-label="Fermeture" id="close__lightbox"><img src="./assets/icons/close.svg" alt="bouton de fermeture de la ligthbox"/></button>
-                <a tabindex="0" aria-label="Previous Media" id="prev__lightbox"><img class="horizontal-reverse" src="./assets/icons/arrow.svg" alt="Previous media button"/></a>
+                <a tabindex="0" aria-label="Previous Media" id="prev__lightbox"><img class="horizontal-reverse" src="./assets/icons/arrow.svg" alt="Bouton pour revenir à la photo précédente"/></a>
                 <div id="media__lightbox"></div>
-                <a tabindex="0" aria-label="Next media" id="next__lightbox"><img src="./assets/icons/arrow.svg" alt="Next media button"/></a>
+                <a tabindex="0" aria-label="Next media" id="next__lightbox"><img src="./assets/icons/arrow.svg" alt="Bouton pour accèder à la prochaine photo"/></a>
             </div>
         </div>
         <script src="./scripts/factories/photographerFactory.js"></script>
