--- a/photographer.html
+++ b/photographer.html
@@ -22,7 +22,7 @@
             <div class="modal">
                 <header>
                     <h2 id="contact-title" tabindex="0">Contactez moi</h2>
-                    <button tabindex="0" aria-label="Close Contact form" id="closeModal"><img src="./assets/icons/close.svg" alt="Bouton de fermeture du formulaire"/></button>
+                    <button tabindex="0" aria-label="Bouton de fermeture du formulaire" id="closeModal"><img src="./assets/icons/close.svg" alt="Bouton de fermeture du formulaire"/></button>
                 </header>
                 <form id="contact-form" method="post">
                     <div role="group" aria-labelledby="coordonnees" id="coordonnees">
@@ -76,9 +76,9 @@
         <div id="lightboxmodal" role="dialog" aria-label="Media en gros plan" aria-hidden="true" tabindex="0">
             <div id="lightbox">
                 <button aria-label="Fermeture" id="close__lightbox"><img src="./assets/icons/close.svg" alt="bouton de fermeture de la ligthbox"/></button>
-                <a tabindex="0" aria-label="Previous Media" id="prev__lightbox"><img class="horizontal-reverse" src="./assets/icons/arrow.svg" alt="Bouton pour revenir à la photo précédente"/></a>
+                <a tabindex="0" aria-label="Image précédente" id="prev__lightbox"><img class="horizontal-reverse" src="./assets/icons/arrow.svg" alt="Bouton pour revenir à la photo précédente"/></a>
                 <div id="media__lightbox"></div>
-                <a tabindex="0" aria-label="Next media" id="next__lightbox"><img src="./assets/icons/arrow.svg" alt="Bouton pour accèder à la prochaine photo"/></a>
+                <a tabindex="0" aria-label="Prochaine image" id="next__lightbox"><img src="./assets/icons/arrow.svg" alt="Bouton pour accèder à la prochaine photo"/></a>
             </div>
         </div>
         <script src="./scripts/factories/photographerFactory.js"></script>
