--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     </head>
     <body>
         <header>
-            <nav aria-label="Navigation Page Accueil">
-                <a tabindex="0" href="./index.html">
-                    <img src="./assets/images/logo.png" class="logo" alt="Fisheye Home Page"/>
-                </a>
-            </nav>
+            <div>
+
+                <img src="./assets/images/logo.png" class="logo" alt="Fisheye Home Page"/>
+
+            </div>
             <h1 tabindex="0">Nos photographes</h1>
         </header>
         <main id="main">
