--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 tabindex="0">Nos photographes</h1>
         </header>
         <main id="main">
-            <nav aria-label="Navigation principale" class="photographer_section"></nav>
+            <nav aria-label="Liste de tous les photographes" class="photographer_section"></nav>
         </main>
         <script src="./scripts/factories/photographerFactory.js"></script>
         <script src="./scripts/pages/index.js"></script>
