--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <div>
+            <div tabindex="0">
                 <img src="./assets/images/logo.png" class="logo" alt="Fisheye Home Page"/>
             </div>
             <h1 tabindex="0">Nos photographes</h1>
